# RomanNepaliAI

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
docs/: index.html  style.css  transliterate.js
examples/imported_romanized_nepali/: pretrained_translation_guide.md  simple_translation.py  training_summary.json  ultra_simple_translation.py
src/roman_nepali_ai/: __init__.py  batch.py  cli.py  server.py  subtitles.py  translate.py  transliterate.py
src/roman_nepali_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_batch.py  test_cli.py  test_server.py  test_subtitles.py  test_translate.py  test_transliterate.py
