[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roman-nepali-ai"
version = "0.0.1"
description = "Nepali to English translation for subtitles and text"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
hf = ["transformers[sentencepiece]>=4.30", "torch>=1.13"]
google = ["googletrans==4.0.0rc1"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
roman-nepali-ai = "roman_nepali_ai.cli:main"

[tool.setuptools]
packages = ["roman_nepali_ai"]
package-dir = { "" = "src" }
